--- a/index.html
+++ b/index.html
@@ -32,50 +32,26 @@ how attention is drawn to tiny moving features.
 
 <dl>
 
-<dt><a href="gaze.html">
-Tracking
-</a></dt><dd>
-First full reflex arc.
-</dd>
-
-<dt><a href="">
-Future
-</a></dt><dd>
-Incomplete new code.
-<!--
-Brain Building Kit&trade;
--->
-</dd>
-
-<dt><a href="distributor.html">
-Distributor
-</a></dt><dd>
-Muscle control
-<!--
-A finished demonstration for how muscles are driven.
-<br /><br />
-Evenly distributed twitch signals and variable tonus
-while avoiding exhausting individual twitch units.
--->
-</dd>
-
+<dt><a href="Heilmeier.html">Overview</a></dt><dd>Heilmeier catechism</dd>
+<dt><a href="gaze.html">Tracking</a></dt><dd>First full reflex arc.</dd>
+<dt><a href="">Future</a></dt><dd>Incomplete new code.</dd>
+<dt><a href="distributor.html">Distributor</a></dt><dd>Muscle control</dd>
+<dt><a href="https://github.com/jlettvin/Airy">
+Airy</a></dt><dd>Generating diffraction</dd>
 <dt><a href="https://rawgit.com/jlettvin/JYL/master/seen.movement.html">
-Seen Movement
-</a></dt><dd>
-Key frog experiment
-<!--
-A visualization of a significant experiment.
--->
-</dd>
-
+Seen Movement</a></dt><dd>Key frog experiment</dd>
 <dt><a href="https://rawgit.com/jlettvin/Tubulin/master/bipolar.shared.path.html">
-Shared tubulin
-</a></dt>
+Shared tubulin</a></dt>
 <dt><a href="https://rawgit.com/jlettvin/Tubulin/master/bipolar.unique.path.html">
-Unique tubulin
-</a></dt><dd>
-Tubulin trees (detailed).
-</dd>
+Unique tubulin</a></dt><dd>Tubulin trees (detailed).</dd>
+<dt><a href="https://github.com/jlettvin/NoisyGrayStep">
+Gray step</a></dt><dd>Contrast boundaries</dd>
+<dt><a href="https://github.com/jlettvin/HexTile">
+Hexagon pack</a></dt><dd>Labeling positions</dd>
+<dt><a href="https://github.com/jlettvin/JYL">
+Jerry Lettvin</a></dt><dd>Significant papers</dd>
+
+
 
 		</dl>
 
