--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ how attention is drawn to tiny moving features.
 <dt><a href="gaze.html">Tracking</a></dt><dd>First full reflex arc.</dd>
 <dt><a href="">Future</a></dt><dd>Incomplete new code.</dd>
 <dt><a href="distributor.html">Distributor</a></dt><dd>Muscle control</dd>
+<dt><a href="https://rawgit.com/jdl-mit-alum/rod/master/rod.html">
+Rod</a></dt><dd>Photoreceptor adaptation</dd>
 <dt><a href="https://github.com/jlettvin/Airy">
 Airy</a></dt><dd>Generating diffraction</dd>
 <dt><a href="https://rawgit.com/jlettvin/JYL/master/seen.movement.html">
