--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ This visual model illustrates the full reflex arc needed to describe
 how attention is drawn to tiny moving features.
 -->
 
-		<h3>Directory</h3>
+		<h3>BBK Pages</h3>
 		<ul id="someButtons"></ul>
 
 		<!--
