converging look and feel

--- a/gaze.html
+++ b/gaze.html
@@ -14,8 +14,9 @@
 		<link   type=  "image/x-icon"    href="gaze.png" rel="icon" />
 	</head>
 	<body bgcolor="#ffffcc">
-		<h1>Verging on Hyperacuity</h1>
-		<h6>Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved</h6>
+		<script type="text/javascript">
+			doHeader ("Verging on Hyperacuity");
+		</script>
 		<table class="center">
 			<tr><td>
 				Save as: 
@@ -92,5 +93,6 @@
 				</table>
 			</td></tr>
 		</table>
+		<h6>Copyright&copy; 2018 Jonathan D. Lettvin, All Rights Reserved</h6>
 	</body>
 </html>
