--- a/Heilmeier.html
+++ b/Heilmeier.html
@@ -12,7 +12,7 @@ table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
 	</head>
 	<body bgcolor="#ffffcc">
 	<script type="text/javascript">
-		doHeader ("Why not put brains in your devices?");
+		doHeader ("Heilmeier Catechism");
 	</script>
 
 		<h3>The Heilmeier questions:</h3>
