--- a/distributor.html
+++ b/distributor.html
@@ -15,6 +15,11 @@
 </head>
 
 <body>
+	<!--
+		<script type="text/javascript">
+			doHeader ("Twitch Distributor");
+		</script>
+		-->
 	<!-- 2222222222222222222222222222222222222222222222222222222222222222222 -->
 	<div align="center">
 
