Removed dead link

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ ___With the patent pending Brain Building Kit™, artificial brains can be built
 ___With brains, your devices will work better than they ever have before.
 				</div>
 				</div>
+			</span>
 			</td></tr>
 		</table>
-		</span>
 	</body>
 	<script type="text/javascript">
 		{
@@ -87,9 +87,9 @@ ___With brains, your devices will work better than they ever have before.
 				{	URL: "https://rawgit.com/jdl-mit-alum/rod/master/rod.html",
 					title: "Rod",
 					tooltip: "Photoreceptor adaptation"},
-				{	URL: "https://rawgit.com/jlettvin/Airy",
-					title: "Airy",
-					tooltip: "Generating diffraction"},
+				//{	URL: "https://rawgit.com/jlettvin/Airy",
+					//title: "Airy",
+					//tooltip: "Generating diffraction"},
 				{	URL: "https://rawgit.com/jlettvin/JYL/master/seen.movement.html",
 					title: "Seen Movement",
 					tooltip: "Key frog experiment"},
