Removed dead link

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ ___With brains, your devices will work better than they ever have before.
 				{	URL: "",
 					title: "Future",
 					tooltip: "Incomplete new code"},
-				{	URL: "distributor.html",
-					title: "Distributor",
-					tooltip: "Muscle control"},
+				//{	URL: "distributor.html",
+					//title: "Distributor",
+					//tooltip: "Muscle control"},
 				{	URL: "distributor.html",
 					title: "Distributor",
 					tooltip: "Muscle control"},
