--- a/index.html
+++ b/index.html
@@ -66,48 +66,51 @@ ___With brains, your devices will work better than they ever have before.
 	</body>
 	<script type="text/javascript">
 		{
+			var GrayStep = "https://github.com/jlettvin/NoisyGrayStep/";
+			var HexTile  = "https://github.com/jlettvin/HexTile/";
+			var JYL      = "https://rawgit.com/jlettvin/JYL/master/";
+			var rod      = "https://rawgit.com/jdl-mit-alum/rod/master/";
+			var Tubulin  = "https://rawgit.com/jlettvin/Tubulin/master/";
+
 			var specification = {
 				has: { type: "buttons", tag: 'li', place: "right" },
 				items: [
-				{	URL: "Heilmeier.html",
-					title: "Proposal",
-					tooltip: "Q&amp;A"},
-				{	URL: "gaze.html",
-					title: "Tracking",
-					tooltip: "First full reflex arc"},
-				{	URL: "",
-					title: "Future",
-					tooltip: "Incomplete new code"},
-				//{	URL: "distributor.html",
-					//title: "Distributor",
-					//tooltip: "Muscle control"},
-				{	URL: "distributor.html",
-					title: "Distributor",
-					tooltip: "Muscle control"},
-				{	URL: "https://rawgit.com/jdl-mit-alum/rod/master/rod.html",
-					title: "Rod",
-					tooltip: "Photoreceptor adaptation"},
-				//{	URL: "https://rawgit.com/jlettvin/Airy",
-					//title: "Airy",
-					//tooltip: "Generating diffraction"},
-				{	URL: "https://rawgit.com/jlettvin/JYL/master/seen.movement.html",
-					title: "Seen Movement",
-					tooltip: "Key frog experiment"},
-				{	URL: "https://rawgit.com/jlettvin/Tubulin/master/bipolar.shared.path.html",
-					title: "Shared paths",
-					tooltip: ""},
-				{	URL: "https://rawgit.com/jlettvin/Tubulin/master/bipolar.unique.path.html",
-					title: "Unique paths",
-					tooltip: "Tubulin trees"},
-				{	URL: "https://github.com/jlettvin/NoisyGrayStep",
-					title: "Gray step",
-					tooltip: "Contrast boundaries"},
-				{	URL: "https://github.com/jlettvin/HexTile",
-					title: "Hexagon pack",
-					tooltip: "Labeling positions"},
-				{	URL: "https://github.com/jlettvin/JYL",
-					title: "Jerry Lettvin",
-					tooltip: "Significant papers"},
+				{	href: "Heilmeier.html",
+					text: "Proposal",
+					help: "Q&amp;A"},
+				{	href: "gaze.html",
+					text: "Tracking",
+					help: "First full reflex arc"},
+				{	href: "",
+					text: "Future",
+					help: "Incomplete new code"},
+				{	href: "distributor.html",
+					text: "Distributor",
+					help: "Muscle control"},
+				{	href: rod + "rod.html",
+					text: "Rod",
+					help: "Photoreceptor adaptation"},
+				//{	href: "https://rawgit.com/jlettvin/Airy",
+					//text: "Airy",
+					//help: "Generating diffraction"},
+				{	href: JYL + "seen.movement.html",
+					text: "Seen Movement",
+					help: "Key frog experiment"},
+				{	href: Tubulin + "bipolar.shared.path.html",
+					text: "Shared paths",
+					help: "axon terminal arbor"},
+				{	href: Tubulin + "bipolar.unique.path.html",
+					text: "Unique paths",
+					help: "Tubulin trees"},
+				{	href: GrayStep + "NoisyGrayStep",
+					text: "Gray step",
+					help: "Contrast boundaries"},
+				{	href: HexTile,
+					text: "Hexagon pack",
+					help: "Labeling positions"},
+				{	href: JYL,
+					text: "Jerry Lettvin",
+					help: "Significant papers"},
 				]
 			};
 			someButtons (specification);
