skeletal muscle model

--- a/index.html
+++ b/index.html
@@ -84,9 +84,12 @@ ___With brains, your devices will work better than they ever have before.
 				{	href: "",
 					text: "Future",
 					help: "Incomplete new code"},
+				{	href: "skeletal.html",
+					text: "Skeletal muscle",
+					help: "BBK&trade; Model details"},
 				{	href: "distributor.html",
 					text: "Distributor",
-					help: "Muscle control"},
+					help: "BBK&trade; Muscle control details"},
 				{	href: rod + "rod.html",
 					text: "Rod",
 					help: "Photoreceptor adaptation"},
