--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link   type   ="image/x-icon"    href="BBKtm.png" rel="icon" />
 		<script type   ="text/javascript" src="utility.js"></script>
 		<script type   ="text/javascript" src ="wiki.js"></script>
+		<script type   ="text/javascript" src ="speakable.js"></script>
 		<link   type   ="text/css"        href="tooltip.css" rel="stylesheet">
 <style>
 table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
@@ -78,6 +79,18 @@ ___With brains, your devices will work better than they ever have before.
 				{	href: "Heilmeier.html",
 					text: "Proposal",
 					help: "Q&amp;A"},
+				{	href: JYL + "seen.movement.html",
+					text: "Seen Movement",
+					help: "Experiment identifying geometrics"},
+				{	href: "optics.html",
+					text: "Visual optics",
+					help: "Refraction, Diffraction, etc..."},
+				{	href: GrayStep + "NoisyGrayStep",
+					text: "Gray step",
+					help: "Key problem to be solved"},
+				{	href: rod + "rod.html",
+					text: "Transduction",
+					help: "Photoreceptor adaptation"},
 				{	href: "gaze.html",
 					text: "Tracking",
 					help: "First full reflex arc"},
@@ -90,24 +103,15 @@ ___With brains, your devices will work better than they ever have before.
 				{	href: "distributor.html",
 					text: "Distributor",
 					help: "BBK&trade; Muscle control details"},
-				{	href: rod + "rod.html",
-					text: "Rod",
-					help: "Photoreceptor adaptation"},
 				//{	href: "https://rawgit.com/jlettvin/Airy",
 					//text: "Airy",
 					//help: "Generating diffraction"},
-				{	href: JYL + "seen.movement.html",
-					text: "Seen Movement",
-					help: "Key frog experiment"},
 				{	href: Tubulin + "bipolar.shared.path.html",
 					text: "Shared paths",
 					help: "axon terminal arbor"},
 				{	href: Tubulin + "bipolar.unique.path.html",
 					text: "Unique paths",
 					help: "Tubulin trees"},
-				{	href: GrayStep + "NoisyGrayStep",
-					text: "Gray step",
-					help: "Contrast boundaries"},
 				{	href: HexTile,
 					text: "Hexagon pack",
 					help: "Labeling positions"},
