--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
 	</head>
 	<body bgcolor="#ffffcc">
 	<script type="text/javascript">
-		doHeader ("Why not put brains in your devices?");
+		doHeader ("thebbk.com\nWhy not put brains in your devices?");
 	</script>
 
 		<!--
@@ -31,7 +31,7 @@ This visual model illustrates the full reflex arc needed to describe
 how attention is drawn to tiny moving features.
 -->
 
-		<h3>BBK Pages</h3>
+		<h3>the BBK Pages</h3>
 		<ul id="someButtons"></ul>
 
 		<!--
@@ -99,10 +99,10 @@ ___With brains, your devices will work better than they ever have before.
 					help: "Incomplete new code"},
 				{	href: "skeletal.html",
 					text: "Skeletal muscle",
-					help: "BBK&trade; Model details"},
+					help: "the BBK&trade; Model details"},
 				{	href: "distributor.html",
 					text: "Distributor",
-					help: "BBK&trade; Muscle control details"},
+					help: "the BBK&trade; Muscle control details"},
 				//{	href: "https://rawgit.com/jlettvin/Airy",
 					//text: "Airy",
 					//help: "Generating diffraction"},
