--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
 	</head>
 	<body bgcolor="#ffffcc">
 	<script type="text/javascript">
-		doHeader ("thebbk.com<br /><br />Why not put brains in your devices?");
+		doHeader ('<a href="http://thebbk.com"><big>thebbk.com</big></a><br />Why not put brains in your devices?');
 	</script>
 
 		<!--
