--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@ table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
 	</head>
 	<body bgcolor="#ffffcc">
 	<script type="text/javascript">
-		doHeader ('<a href="http://thebbk.com"><big>thebbk.com</big></a><br />Why not put brains in your devices?');
+		doHeader (
+			'<a href="http://thebbk.com">' +
+			'<abbr title="refreshes to jlettvin.github.io/gaze/index.html">' +
+			'<big>thebbk.com</big>' +
+			'</abbr>' +
+			'</a><br />Why not put brains in your devices?');
 	</script>
 
 		<!--
