--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@ table, td { border: 1px solid black; border-collapse: collapse; padding: 3px; }
 			'<abbr title="refreshes to jlettvin.github.io/gaze/index.html">' +
 			'<big>thebbk.com</big>' +
 			'</abbr>' +
-			'</a><br />Why not put brains in your devices?');
+			'</a><br />synthetic reflexes for devices?'
+			//'</a><br />Why not put brains in your devices?'
+		);
 	</script>
 
 		<!--
